修改樣式風格

--- a/index.html
+++ b/index.html
@@ -66,7 +66,11 @@
                         <div style="display: flex;">
                             <div style="flex: 3;">
                                 <h1 class="name" style="white-space:nowrap; margin-right: 10px;">陳敬家</h1>
-                                <div class="title">前端工程師</div>
+                                <div class="title">醫療照護 x 資訊工程</div>
+                                <br>
+                                <i class="bi bi-megaphone-fill" style="color: #4769d0;"></i>
+                                &ensp;<strong>我能為智慧醫療領域發展帶來獨特的價值與貢獻！</strong>
+                                <br>
                             </div>
                             <div style="flex: 1;">
 
@@ -162,49 +166,167 @@
                     <div class="modal-body">
 
                         <div class="swot-grid">
+
+                            <!-- Strengths -->
                             <div class="swot-box strength">
                                 <h4>優勢 (Strengths)</h4>
-                                <ul>
-                                    <li>跨領域專業能力</li>
-                                    <li>高度自我驅動與學習力</li>
-                                    <li>強溝通與協作能力</li>
-                                    <li>抗壓性與問題解決力</li>
-                                    <li>創新與系統思維</li>
+                                <ul class="swot-items">
+                                    <li class="swot-item">
+                                        <button class="swot-toggle" data-bs-toggle="collapse" data-bs-target="#str1"
+                                            aria-expanded="false" aria-controls="str1">
+                                            跨領域專業能力
+                                        </button>
+                                        <div id="str1" class="collapse swot-content">
+                                            <p>護理 + 資訊工程背景，能理解臨床現場痛點並轉化為技術需求，適合數位醫療或健康科技專案。</p>
+                                        </div>
+                                    </li>
+
+                                    <li class="swot-item">
+                                        <button class="swot-toggle" data-bs-toggle="collapse" data-bs-target="#str2"
+                                            aria-expanded="false" aria-controls="str2">
+                                            高度自我驅動與學習力
+                                        </button>
+                                        <div id="str2" class="collapse swot-content">
+                                            <p>能快速上手 n8n、Cornerstone.js、Vue 等新工具，並將所學應用於專案落地。</p>
+                                        </div>
+                                    </li>
+
+                                    <li class="swot-item">
+                                        <button class="swot-toggle" data-bs-toggle="collapse" data-bs-target="#str3"
+                                            aria-expanded="false" aria-controls="str3">
+                                            強溝通與協作能力
+                                        </button>
+                                        <div id="str3" class="collapse swot-content">
+                                            <p>DiSC 變色龍型人格；善於觀察需求、跨部門協調，兼顧目標達成與團隊關係。</p>
+                                        </div>
+                                    </li>
+
+                                    <li class="swot-item">
+                                        <button class="swot-toggle" data-bs-toggle="collapse" data-bs-target="#str4"
+                                            aria-expanded="false" aria-controls="str4">
+                                            抗壓性與問題解決力
+                                        </button>
+                                        <div id="str4" class="collapse swot-content">
+                                            <p>偏好邏輯分析與策略規劃；在不確定/緊急情境下能快速調整方案。</p>
+                                        </div>
+                                    </li>
+
+                                    <li class="swot-item">
+                                        <button class="swot-toggle" data-bs-toggle="collapse" data-bs-target="#str5"
+                                            aria-expanded="false" aria-controls="str5">
+                                            創新與系統思維
+                                        </button>
+                                        <div id="str5" class="collapse swot-content">
+                                            <p>善用技術自動化流程（如醫療排程、個案管理），具前瞻思維並提出流程改善建議。</p>
+                                        </div>
+                                    </li>
                                 </ul>
                             </div>
 
+                            <!-- Weaknesses -->
                             <div class="swot-box weakness">
                                 <h4>劣勢 (Weaknesses)</h4>
-                                <ul>
-                                    <li>過度追求完美</li>
-                                    <li>容易承擔過多責任</li>
-                                    <li>過度分析可能拖延決策</li>
+                                <ul class="swot-items">
+                                    <li class="swot-item">
+                                        <button class="swot-toggle" data-bs-toggle="collapse" data-bs-target="#wk1"
+                                            aria-expanded="false" aria-controls="wk1">
+                                            過度追求完美
+                                        </button>
+                                        <div id="wk1" class="collapse swot-content">
+                                            <p>容易延長檢查時間；現以 time-box、定義完成標準 (DoD) 控制精度與進度。</p>
+                                        </div>
+                                    </li>
+                                    <li class="swot-item">
+                                        <button class="swot-toggle" data-bs-toggle="collapse" data-bs-target="#wk2"
+                                            aria-expanded="false" aria-controls="wk2">
+                                            容易承擔過多責任
+                                        </button>
+                                        <div id="wk2" class="collapse swot-content">
+                                            <p>以 RACI 與 WIP 限制分配工作量，確保風險與資源平衡。</p>
+                                        </div>
+                                    </li>
+                                    <li class="swot-item">
+                                        <button class="swot-toggle" data-bs-toggle="collapse" data-bs-target="#wk3"
+                                            aria-expanded="false" aria-controls="wk3">
+                                            過度分析可能拖延決策
+                                        </button>
+                                        <div id="wk3" class="collapse swot-content">
+                                            <p>先決策後驗證：採用 MVP/試點驗證降低遲滯風險。</p>
+                                        </div>
+                                    </li>
                                 </ul>
                             </div>
 
+                            <!-- Opportunities -->
                             <div class="swot-box opportunity">
                                 <h4>機會 (Opportunities)</h4>
-                                <ul>
-                                    <li>數位醫療與健康科技快速成長</li>
-                                    <li>AI 與自動化專案需求增加</li>
-                                    <li>跨領域教育與顧問角色</li>
+                                <ul class="swot-items">
+                                    <li class="swot-item">
+                                        <button class="swot-toggle" data-bs-toggle="collapse" data-bs-target="#op1"
+                                            aria-expanded="false" aria-controls="op1">
+                                            數位醫療與健康科技快速成長
+                                        </button>
+                                        <div id="op1" class="collapse swot-content">
+                                            <p>市場導入時機佳；聚焦法規/臨床工作流程整合的產品更具優勢。</p>
+                                        </div>
+                                    </li>
+                                    <li class="swot-item">
+                                        <button class="swot-toggle" data-bs-toggle="collapse" data-bs-target="#op2"
+                                            aria-expanded="false" aria-controls="op2">
+                                            AI 與自動化專案需求增加
+                                        </button>
+                                        <div id="op2" class="collapse swot-content">
+                                            <p>可用 n8n 與前端框架導入自動化與可視化報表，提高效率與透明度。</p>
+                                        </div>
+                                    </li>
+                                    <li class="swot-item">
+                                        <button class="swot-toggle" data-bs-toggle="collapse" data-bs-target="#op3"
+                                            aria-expanded="false" aria-controls="op3">
+                                            跨領域教育與顧問角色
+                                        </button>
+                                        <div id="op3" class="collapse swot-content">
+                                            <p>以臨床語言連接工程與法規；擔任 PM/顧問加速落地。</p>
+                                        </div>
+                                    </li>
                                 </ul>
                             </div>
 
+                            <!-- Threats -->
                             <div class="swot-box threat">
                                 <h4>威脅 (Threats)</h4>
-                                <ul>
-                                    <li>快速變動的技術環境</li>
-                                    <li>跨領域角色認知挑戰</li>
-                                    <li>高責任與多任務壓力</li>
+                                <ul class="swot-items">
+                                    <li class="swot-item">
+                                        <button class="swot-toggle" data-bs-toggle="collapse" data-bs-target="#th1"
+                                            aria-expanded="false" aria-controls="th1">
+                                            快速變動的技術環境
+                                        </button>
+                                        <div id="th1" class="collapse swot-content">
+                                            <p>以學習週期/版本追蹤機制定期更新技能樹，維持競爭力。</p>
+                                        </div>
+                                    </li>
+                                    <li class="swot-item">
+                                        <button class="swot-toggle" data-bs-toggle="collapse" data-bs-target="#th2"
+                                            aria-expanded="false" aria-controls="th2">
+                                            跨領域角色認知挑戰
+                                        </button>
+                                        <div id="th2" class="collapse swot-content">
+                                            <p>用可量化產出（里程碑、KPI、案例庫）建立信任與角色清晰度。</p>
+                                        </div>
+                                    </li>
+                                    <li class="swot-item">
+                                        <button class="swot-toggle" data-bs-toggle="collapse" data-bs-target="#th3"
+                                            aria-expanded="false" aria-controls="th3">
+                                            高責任與多任務壓力
+                                        </button>
+                                        <div id="th3" class="collapse swot-content">
+                                            <p>以優先級框架 (ICE/WSJF) 與資源配置機制，避免過載。</p>
+                                        </div>
+                                    </li>
                                 </ul>
                             </div>
+
                         </div>
 
-                        <br>
-                        <i class="bi bi-megaphone-fill" style="color: #4769d0;"></i>
-                        &ensp;<strong>我相信，我能為醫療科技的發展帶來獨特的價值與貢獻！</strong>
-                        <br>
                     </div>
                 </div>
             </div>
