--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="陳敬家的個人履歷 - 前端工程師">
-    <title>陳敬家 - 前端工程師</title>
+    <meta name="description" content="陳敬家的個人履歷 - 專案管理師">
+    <title>陳敬家 - 專案管理師</title>
     <!-- <link rel="stylesheet" href="styles.css" id="light-theme"> -->
 
     <!-- 預先載入兩個主題的 CSS -->
@@ -169,7 +169,7 @@
 
                             <!-- Strengths -->
                             <div class="swot-box strength">
-                                <h4>優勢 (Strengths)</h4>
+                                <h5>優勢 (Strengths)</h5>
                                 <ul class="swot-items">
                                     <li class="swot-item">
                                         <button class="swot-toggle" data-bs-toggle="collapse" data-bs-target="#str1"
@@ -225,7 +225,7 @@
 
                             <!-- Weaknesses -->
                             <div class="swot-box weakness">
-                                <h4>劣勢 (Weaknesses)</h4>
+                                <h5>劣勢 (Weaknesses)</h5>
                                 <ul class="swot-items">
                                     <li class="swot-item">
                                         <button class="swot-toggle" data-bs-toggle="collapse" data-bs-target="#wk1"
@@ -259,7 +259,7 @@
 
                             <!-- Opportunities -->
                             <div class="swot-box opportunity">
-                                <h4>機會 (Opportunities)</h4>
+                                <h5>機會 (Opportunities)</h5>
                                 <ul class="swot-items">
                                     <li class="swot-item">
                                         <button class="swot-toggle" data-bs-toggle="collapse" data-bs-target="#op1"
@@ -293,7 +293,7 @@
 
                             <!-- Threats -->
                             <div class="swot-box threat">
-                                <h4>威脅 (Threats)</h4>
+                                <h5>威脅 (Threats)</h5>
                                 <ul class="swot-items">
                                     <li class="swot-item">
                                         <button class="swot-toggle" data-bs-toggle="collapse" data-bs-target="#th1"
