--- a/index.html
+++ b/index.html
@@ -169,7 +169,14 @@
 
                             <!-- Strengths -->
                             <div class="swot-box strength">
-                                <h5>優勢 (Strengths)</h5>
+                                <!-- 左上膠囊 -->
+                                <span class="swot-chip">Strengths</span>
+                                <!-- 交界處圓形徽章 -->
+                                <span class="swot-fab">S</span>
+
+                                <!-- 原本標題保留語意但隱藏 -->
+                                <h5 class="visually-hidden">優勢 (Strengths)</h5>
+
                                 <ul class="swot-items">
                                     <li class="swot-item">
                                         <button class="swot-toggle" data-bs-toggle="collapse" data-bs-target="#str1"
@@ -181,15 +188,6 @@
                                         </div>
                                     </li>
 
-                                    <li class="swot-item">
-                                        <button class="swot-toggle" data-bs-toggle="collapse" data-bs-target="#str2"
-                                            aria-expanded="false" aria-controls="str2">
-                                            高度自我驅動與學習力
-                                        </button>
-                                        <div id="str2" class="collapse swot-content">
-                                            <p>能快速上手 n8n、Cornerstone.js、Vue 等新工具，並將所學應用於專案落地。</p>
-                                        </div>
-                                    </li>
 
                                     <li class="swot-item">
                                         <button class="swot-toggle" data-bs-toggle="collapse" data-bs-target="#str3"
@@ -201,15 +199,6 @@
                                         </div>
                                     </li>
 
-                                    <li class="swot-item">
-                                        <button class="swot-toggle" data-bs-toggle="collapse" data-bs-target="#str4"
-                                            aria-expanded="false" aria-controls="str4">
-                                            抗壓性與問題解決力
-                                        </button>
-                                        <div id="str4" class="collapse swot-content">
-                                            <p>偏好邏輯分析與策略規劃；在不確定/緊急情境下能快速調整方案。</p>
-                                        </div>
-                                    </li>
 
                                     <li class="swot-item">
                                         <button class="swot-toggle" data-bs-toggle="collapse" data-bs-target="#str5"
@@ -225,7 +214,11 @@
 
                             <!-- Weaknesses -->
                             <div class="swot-box weakness">
-                                <h5>劣勢 (Weaknesses)</h5>
+                                <span class="swot-chip">Weaknesses</span>
+                                <span class="swot-fab">W</span>
+
+                                <h5 class="visually-hidden">劣勢 (Weaknesses)</h5>
+
                                 <ul class="swot-items">
                                     <li class="swot-item">
                                         <button class="swot-toggle" data-bs-toggle="collapse" data-bs-target="#wk1"
@@ -259,7 +252,11 @@
 
                             <!-- Opportunities -->
                             <div class="swot-box opportunity">
-                                <h5>機會 (Opportunities)</h5>
+                                <span class="swot-chip">Opportunities</span>
+                                <span class="swot-fab">O</span>
+
+                                <h5 class="visually-hidden">機會 (Opportunities)</h5>
+
                                 <ul class="swot-items">
                                     <li class="swot-item">
                                         <button class="swot-toggle" data-bs-toggle="collapse" data-bs-target="#op1"
@@ -293,7 +290,11 @@
 
                             <!-- Threats -->
                             <div class="swot-box threat">
-                                <h5>威脅 (Threats)</h5>
+                                <span class="swot-chip">Threats</span>
+                                <span class="swot-fab">T</span>
+
+                                <h5 class="visually-hidden">威脅 (Threats)</h5>
+
                                 <ul class="swot-items">
                                     <li class="swot-item">
                                         <button class="swot-toggle" data-bs-toggle="collapse" data-bs-target="#th1"
@@ -326,6 +327,7 @@
                             </div>
 
                         </div>
+
 
                     </div>
                 </div>
