--- a/index.html
+++ b/index.html
@@ -67,10 +67,6 @@
                             <div style="flex: 3;">
                                 <h1 class="name" style="white-space:nowrap; margin-right: 10px;">陳敬家</h1>
                                 <div class="title">醫療照護 x 資訊工程</div>
-                                <br>
-                                <i class="bi bi-megaphone-fill" style="color: #4769d0;"></i>
-                                &ensp;<strong>我能為智慧醫療領域發展帶來獨特的價值與貢獻！</strong>
-                                <br>
                             </div>
                             <div style="flex: 1;">
 
@@ -122,6 +118,11 @@
                             除了深入理解專案管理十大知識領域，亦學習將自動化工作流帶入管理應用，提高效率和精確度。
                         </p>
 
+                        <br>
+                        <i class="bi bi-megaphone-fill" style="color: #4769d0;"></i>
+                        &ensp;<strong>我相信，我能為智慧醫療領域發展帶來獨特的價值與貢獻！</strong>
+                        <br>
+
                     </div>
                 </div>
             </div>
@@ -137,18 +138,27 @@
                     <div class="modal-body">
 
                         <p class="indented-text">
-                            由於深刻體會數位科技對臨床照護的價值與影響力，我對醫療服務的數位轉型產生濃厚興趣，
-                            因而進入資訊工程領域進修，系統化掌握軟體開發與 UI/UX 設計能力，
-                            期望以技術驅動創新，實現以人為本的智慧醫療解決方案。
+                            在臨床工作時，我常常感受到醫療人員在繁雜流程中的負擔。像是需要反覆人工輸入資料、帶著厚厚一疊衛教單張、
+                            或是在補充耗材時還要手動清點數量。這些過程不僅耗時，也容易出錯。
+                            那時候我就意識到，其實不只是病人需要更好的體驗，醫療人員同樣需要數位科技帶來的便利。
+                            若能透過系統自動紀錄、智慧化管理與無紙化設計，就能減少重複性工作，讓醫療服務回到最重要的核心——專注在「人」身上。
                         </p>
 
                         <p class="indented-text">
-                            憑藉護理與資訊工程的跨領域背景，我能結合軟體設計與照護實務，精準回應使用者痛點，
-                            優化服務流程與醫療作業效率，並提升患者整體照護體驗。
+                            也因為這樣的體悟，我決定進入資訊工程領域進修，系統化學習軟體開發與 UI/UX 設計。
+                            現在的我，已經能獨立開發小工具，或將自動化流程導入工作中，像是簡化資料處理、減少人工步驟，
+                            讓日常作業更省時、更精準。我希望能透過這些能力，把醫療流程設計得更友善、更有效率。
                         </p>
                         <p class="indented-text">
-                            我以人文關懷為核心、理工邏輯為支撐，致力推動兼具溫度與效率的智慧照護模式，縮短病患與醫療服務之間的距離。
-                            未來期盼持續貢獻所長，打造更高效、更人性化的數位醫療環境。
+                            不過，在學習與實作的過程中，我更清楚地認識到自己的角色定位——我並不想單純成為一位工程師，
+                            而是希望站在專案管理的位置，串連臨床需求與技術解決方案。因為我能同時理解醫療現場的痛點，
+                            也能與工程團隊對話，轉化需求並推動落地。這樣的角色，能讓我不只是一個「寫程式的人」，
+                            而是能整合人員、需求與資源，確保專案真正解決問題、創造價值。
+                        </p>
+
+                        <p class="indented-text">
+                            未來，我希望能持續運用跨領域專長，推動一種既高效又有溫度的智慧照護模式，
+                            縮短醫療人員、病人與服務之間的距離，打造更人性化的數位醫療環境。
                         </p>
 
                     </div>
