--- a/index.html
+++ b/index.html
@@ -138,27 +138,34 @@
                     <div class="modal-body">
 
                         <p class="indented-text">
-                            在臨床工作時，我常常感受到醫療人員在繁雜流程中的負擔。像是需要反覆人工輸入資料、帶著厚厚一疊衛教單張、
-                            或是在補充耗材時還要手動清點數量。這些過程不僅耗時，也容易出錯。
-                            那時候我就意識到，其實不只是病人需要更好的體驗，醫療人員同樣需要數位科技帶來的便利。
-                            若能透過系統自動紀錄、智慧化管理與無紙化設計，就能減少重複性工作，讓醫療服務回到最重要的核心——專注在「人」身上。
+                            在臨床工作時，深刻體會醫療人員在繁雜流程中的負擔，例如：
+                            <ul>
+                                <li>需要反覆人工輸入資料</li>
+                                <li>帶著厚厚一疊衛教單張</li>
+                                <li>在補充耗材時還要手動清點數量</li>
+                            </ul>
+                            這些過程不僅耗時，也容易出錯。那時候我就意識到，數位科技能帶來許多的便利性。
+                            若能透過系統自動紀錄、智慧化管理與無紙化設計，就能減少重複性工作，
+                            讓醫療服務回到最重要的核心——專注在「人」身上。也因為這樣的體悟，我決定進入資訊工程領域進修，
+                            系統化學習軟體開發與 UI/UX 設計。
+                        </p>
+
+                        <p class="indented-text">                            
+                            現在的我，已經能:
+                            <ol>
+                                <li>獨立開發小工具、網頁、CRUD系統</li>
+                                <li>將自動化流程導入工作中</li>
+                                <li>簡化資料處理,減少人工步驟</li>
+                            </ol>  
+                        </p>
+                        <p class="indented-text">      
+                            未來，我希望站在專案管理的位置，串連臨床需求與技術解決方案。
+                            因為我能同時理解醫療現場的痛點，也能與工程團隊對話，轉化需求並推動落地。
                         </p>
 
                         <p class="indented-text">
-                            也因為這樣的體悟，我決定進入資訊工程領域進修，系統化學習軟體開發與 UI/UX 設計。
-                            現在的我，已經能獨立開發小工具，或將自動化流程導入工作中，像是簡化資料處理、減少人工步驟，
-                            讓日常作業更省時、更精準。我希望能透過這些能力，把醫療流程設計得更友善、更有效率。
-                        </p>
-                        <p class="indented-text">
-                            不過，在學習與實作的過程中，我更清楚地認識到自己的角色定位——我並不想單純成為一位工程師，
-                            而是希望站在專案管理的位置，串連臨床需求與技術解決方案。因為我能同時理解醫療現場的痛點，
-                            也能與工程團隊對話，轉化需求並推動落地。這樣的角色，能讓我不只是一個「寫程式的人」，
-                            而是能整合人員、需求與資源，確保專案真正解決問題、創造價值。
-                        </p>
-
-                        <p class="indented-text">
-                            未來，我希望能持續運用跨領域專長，推動一種既高效又有溫度的智慧照護模式，
-                            縮短醫療人員、病人與服務之間的距離，打造更人性化的數位醫療環境。
+                            這樣的角色，能讓我更好地發揮跨領域專長，整合人員、需求與資源，確保專案真正解決問題、創造價值。
+                            推動有溫度的智慧照護模式，縮短醫療服務的距離，打造更人性化的數位醫療環境。
                         </p>
 
                     </div>
