--- a/index.html
+++ b/index.html
@@ -357,8 +357,8 @@
                 <section class="section contact-section">
                     <h2 class="section-title-left">聯絡資訊</h2>
                     <ul class="contact-info contact-info-padding">
-                        <li class="phone"><i class="bi bi-telephone-fill"></i> 0973-266-815</li>
-                        <li class="email"><i class="bi bi-envelope-fill"></i> happy34she@gmail.com</li>
+                        <!-- <li class="phone"><i class="bi bi-telephone-fill"></i> </li> -->
+                        <li class="email"><i class="bi bi-envelope-fill"></i> gmail</li>
                         <li class="location"></i>台中市</li>
                         <li class="github">
                             <a href="https://github.com/D1204416" target="_blank" rel="noopener noreferrer">
