--- a/index.html
+++ b/index.html
@@ -138,34 +138,45 @@
                     <div class="modal-body">
 
                         <p class="indented-text">
-                            在臨床工作時，深刻體會醫療人員在繁雜流程中的負擔，例如：
-                            <ul>
-                                <li>需要反覆人工輸入資料</li>
-                                <li>帶著厚厚一疊衛教單張</li>
-                                <li>在補充耗材時還要手動清點數量</li>
-                            </ul>
-                            這些過程不僅耗時，也容易出錯。那時候我就意識到，數位科技能帶來許多的便利性。
-                            若能透過系統自動紀錄、智慧化管理與無紙化設計，就能減少重複性工作，
-                            讓醫療服務回到最重要的核心——專注在「人」身上。也因為這樣的體悟，我決定進入資訊工程領域進修，
-                            系統化學習軟體開發與 UI/UX 設計。
-                        </p>
-
-                        <p class="indented-text">                            
-                            現在的我，已經能:
-                            <ol>
-                                <li>獨立開發小工具、網頁、CRUD系統</li>
-                                <li>將自動化流程導入工作中</li>
-                                <li>簡化資料處理,減少人工步驟</li>
-                            </ol>  
-                        </p>
-                        <p class="indented-text">      
-                            未來，我希望站在專案管理的位置，串連臨床需求與技術解決方案。
-                            因為我能同時理解醫療現場的痛點，也能與工程團隊對話，轉化需求並推動落地。
+                            在臨床工作時，我深刻體會醫療人員在繁雜流程中的負擔，例如：
+                        <ul>
+                            <li>需要反覆人工輸入資料</li>
+                            <li>隨身攜帶厚厚一疊衛教單張</li>
+                            <li>補充耗材時仍須手動清點數量</li>
+                        </ul>
+                        這些過程不僅耗時，也容易出錯。當下我意識到：數位科技若能介入，將帶來巨大的便利。
+                        透過自動紀錄、智慧化管理與無紙化設計，可以有效減少重複性工作，讓醫療服務回歸到最核心的本質——專注於「人」。
+                        也因此，我選擇進入資訊工程領域進修，系統化學習軟體開發與 UI/UX 設計，將這份體悟轉化為解決方案的能力。
                         </p>
 
                         <p class="indented-text">
-                            這樣的角色，能讓我更好地發揮跨領域專長，整合人員、需求與資源，確保專案真正解決問題、創造價值。
-                            推動有溫度的智慧照護模式，縮短醫療服務的距離，打造更人性化的數位醫療環境。
+                            現在的我，已經能：
+                        <ol>
+                            <li>獨立開發小工具、網頁與 CRUD 系統</li>
+                            <li>將自動化流程導入實際工作場景</li>
+                            <li>簡化資料處理，減少人工步驟</li>
+                        </ol>
+                        在這些實作過程中，我不僅思考「如何完成」，更帶入過去擔任客戶成功主管的思維，從使用者需求出發，規劃功能優先順序並優化互動流程，
+                        確保解決方案真正貼合使用者的需要。
+                        </p>
+
+                        <p class="indented-text">
+                            未來，我希望能站在專案管理的位置，串連使用者需求與技術解決方案。
+                            我能同時理解臨床場域的痛點，也能與工程團隊有效溝通，轉譯需求並推動落地，讓科技真正解決醫療服務中的瓶頸。
+                        </p>
+
+                        <p class="indented-text">
+                            我將運用過去累積的三大核心能力：
+                        <ol>
+                            <li>策略思考——如何設計最能減輕使用者負擔的解決方案，並達成專案 KPI 或 OKR？</li>
+                            <li>數據導向——如何透過數據分析洞察需求，進而優化數位科技服務流程？</li>
+                            <li>溝通與提案——如何有效傳達想法，並爭取利益相關者的支持？</li>
+                        </ol>
+                        </p>
+
+                        <p class="indented-text">
+                            這樣的角色，能讓我充分發揮跨領域專長，整合人員、需求與資源，規劃產品路線圖與服務體驗，確保專案真正解決問題並創造價值。
+                            最終，我希望推動有溫度的智慧照護模式，縮短醫療服務的距離，讓醫療人員能更專注於病人，打造更人性化的數位醫療環境。
                         </p>
 
                     </div>
