--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                     <div class="modal-body">
 
                         <p class="indented-text">
-                            在臨床工作時，我深刻體會醫療人員在繁雜流程中的負擔，例如：
+                            在醫療領域時，我深刻體會醫療人員在照護服務中的負擔，例如：
                         <ul>
                             <li>需要反覆人工輸入資料</li>
                             <li>隨身攜帶厚厚一疊衛教單張</li>
