--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                         </ul>
                         這些過程不僅耗時，也容易出錯。當下我意識到：數位科技若能介入，將帶來巨大的便利。
                         透過自動紀錄、智慧化管理與無紙化設計，可以有效減少重複性工作，
-                        讓醫療服務回歸到最核心的本質——專注於「人」。
+                        讓醫療回歸到最核心的本質——專注於「人」。
                         也因此，我選擇進入資訊工程領域進修，系統化學習軟體開發與 UI/UX 設計，
                         將這份體悟轉化為解決方案的能力。
                         </p>
