--- a/index.html
+++ b/index.html
@@ -118,6 +118,13 @@
                             除了深入理解專案管理十大知識領域，亦學習將自動化工作流帶入管理應用，提高效率和精確度。
                         </p>
 
+                        <p class="indented-text">
+                            評估專案需求時，我偏好以數據分析作為問題解決及決策依據；
+                            面對衝突時，則會先適度回應情緒，再協助釐清事實。
+                            若處理臨時需求或例外事件時，我習慣先釐清問題、與目標對焦，
+                            若影響交付目標需要即時與團隊及利害關係人商研可行策略，並在彙整資源後主動調整行動計畫，確保專案持續穩定推進。
+                        </p>
+
                         <br>
                         <i class="bi bi-megaphone-fill" style="color: #4769d0;"></i>
                         &ensp;<strong>我相信，我能為智慧醫療領域發展帶來獨特的價值與貢獻！</strong>
@@ -136,20 +143,18 @@
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <div class="modal-body">
+                        <h6><i class="bi bi-arrow-down-right-circle-fill"></i>「從臨床痛點到數位解方的實踐」</h6>
 
                         <p class="indented-text">
-                            在醫療領域時，我深刻體會醫療人員在照護服務中的負擔，例如：
-                        <ul>
-                            <li>需要反覆人工輸入資料</li>
-                            <li>隨身攜帶厚厚一疊衛教單張</li>
-                            <li>補充耗材時仍須手動清點數量</li>
-                        </ul>
-                        這些過程不僅耗時，也容易出錯。當下我意識到：數位科技若能介入，將帶來巨大的便利。
-                        透過自動紀錄、智慧化管理與無紙化設計，可以有效減少重複性工作，
-                        讓醫療回歸到最核心的本質——專注於「人」。
-                        也因此，我選擇進入資訊工程領域進修，系統化學習軟體開發與 UI/UX 設計，
-                        將這份體悟轉化為解決方案的能力。
+                        在醫療領域時，我深刻體會醫療人員在照護服務中的負擔，例如，「大廳人工唱名叫號」、
+                        「攜帶厚厚一疊衛教單張」、「反覆人工查詢及輸入資料」，這些過程不僅耗時，也容易出錯。
+                        當下我意識到：數位科技若能介入，將帶來巨大的便利。於是我開始推動數位解方，
+                        透過數位看板、串連APP推播叫號、無紙化衛教系統設計，有效減輕工作負擔同時，
+                        讓醫療回歸到最核心的本質 ——<br>—— 專注於「人」。
                         </p>
+
+                        <p class="indented-text">也因此，我選擇進入資訊工程領域進修，系統化學習軟體開發與 UI/UX 設計，
+                        將這份體悟轉化為解決方案的能力。</p>
 
                         <p class="indented-text">
                             現在的我，已經能：
@@ -163,6 +168,7 @@
                         規劃功能優先順序並優化互動流程，確保解決方案真正貼合使用者的需要。
                         </p>
 
+                        <h6><i class="bi bi-arrow-down-right-circle-fill"></i>「跨領域專案管理者的願景與核心能力」</h6>
                         <p class="indented-text">
                             未來，我希望能站在專案管理的位置，串連使用者需求與技術解決方案。
                             我能同時理解臨床場域的痛點，也能與工程團隊有效溝通，
