--- a/index.html
+++ b/index.html
@@ -143,12 +143,12 @@
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <div class="modal-body">
-                        <h6><i class="bi bi-arrow-down-right-circle-fill"></i>「從臨床痛點到數位解方的實踐」</h6>
+                        <h6><i class="bi bi-arrow-down-right-circle-fill"></i> <em>從臨床痛點到數位解方的實踐</em></h6>
 
                         <p class="indented-text">
-                        在醫療領域時，我深刻體會醫療人員在照護服務中的負擔，例如，「大廳人工唱名叫號」、
+                        在醫療領域時，我深刻體會醫療人員在照護服務中的負擔，例如，「在大廳人工唱名叫號」、
                         「攜帶厚厚一疊衛教單張」、「反覆人工查詢及輸入資料」，這些過程不僅耗時，也容易出錯。
-                        當下我意識到：數位科技若能介入，將帶來巨大的便利。於是我開始推動數位解方，
+                        當時我意識到：數位科技若能介入，將帶來巨大的便利。於是我開始推動數位解方，
                         透過數位看板、串連APP推播叫號、無紙化衛教系統設計，有效減輕工作負擔同時，
                         讓醫療回歸到最核心的本質 ——<br>—— 專注於「人」。
                         </p>
