--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <div class="modal-body">
-                        <h6><i class="bi bi-arrow-down-right-circle-fill"></i> <em>從臨床痛點到數位解方的實踐</em></h6>
+                        <h6><i class="bi bi-arrow-down-right-circle-fill"></i>【 從臨床痛點到數位解方的實踐 】</h6>
 
                         <p class="indented-text">
                         在醫療領域時，我深刻體會醫療人員在照護服務中的負擔，例如，「在大廳人工唱名叫號」、
@@ -168,7 +168,7 @@
                         規劃功能優先順序並優化互動流程，確保解決方案真正貼合使用者的需要。
                         </p>
 
-                        <h6><i class="bi bi-arrow-down-right-circle-fill"></i>「跨領域專案管理者的願景與核心能力」</h6>
+                        <h6><i class="bi bi-arrow-down-right-circle-fill"></i>【 跨領域專案管理者的願景與核心能力 】</h6>
                         <p class="indented-text">
                             未來，我希望能站在專案管理的位置，串連使用者需求與技術解決方案。
                             我能同時理解臨床場域的痛點，也能與工程團隊有效溝通，
