--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
                             這樣的角色，能讓我充分發揮跨領域專長，整合人員、需求與資源，
                             規劃產品路線圖與服務體驗，確保專案真正解決問題並創造價值。
                             最終，我希望推動有溫度的智慧照護模式，縮短醫療服務的距離，
-                            讓醫療人員能更專注於病人，打造更人性化的數位醫療環境。
+                            打造更人性化的數位醫療環境。
                         </p>
 
 
