--- a/index.html
+++ b/index.html
@@ -146,15 +146,15 @@
                         <h6><i class="bi bi-arrow-down-right-circle-fill"></i>【 從臨床痛點到數位解方的實踐 】</h6>
 
                         <p class="indented-text">
-                        在醫療領域時，我深刻體會醫療人員在照護服務中的負擔，例如，「在大廳人工唱名叫號」、
+                        在醫療領域時，我深刻體會醫療人員在照護服務中的負擔，例如，「在大廳大聲唱名叫號」、
                         「攜帶厚厚一疊衛教單張」、「反覆人工查詢及輸入資料」，這些過程不僅耗時，也容易出錯。
-                        當時我意識到：數位科技若能介入，將帶來巨大的便利。於是我開始推動數位解方，
-                        透過數位看板、串連APP推播叫號、無紙化衛教系統設計，有效減輕工作負擔同時，
-                        讓醫療回歸到最核心的本質 ——<br>—— 專注於「人」。
+                        當時我意識到：數位科技若能介入，將帶來巨大的便利。於是開始在問題解決策略中加入數位解方，
+                        透過數位看板、串連APP推播叫號、無紙化衛教系統設計，不僅有效減輕線上同仁工作負擔，
+                        同時讓醫療回歸到最核心的本質 ———— 專注於「人」。
                         </p>
 
-                        <p class="indented-text">也因此，我選擇進入資訊工程領域進修，系統化學習軟體開發與 UI/UX 設計，
-                        將這份體悟轉化為解決方案的能力。</p>
+                        <p class="indented-text">也因此，為了提升科技專業素養與實踐能力，我選擇進入資訊工程領域進修，
+                            系統化學習軟體開發與 UI/UX 設計，將這份體悟轉化為能實踐的硬實力。</p>
 
                         <p class="indented-text">
                             現在的我，已經能：
