--- a/index.html
+++ b/index.html
@@ -119,10 +119,13 @@
                         </p>
 
                         <p class="indented-text">
-                            評估專案需求時，我偏好以數據分析作為問題解決及決策依據；
-                            面對衝突時，則會先適度回應情緒，再協助釐清事實。
-                            若處理臨時需求或例外事件時，我習慣先釐清問題、與目標對焦，
-                            若影響交付目標需要即時與團隊及利害關係人商研可行策略，並在彙整資源後主動調整行動計畫，確保專案持續穩定推進。
+                            n8n在專案管理中的應用：
+                        <ul>
+                            <li>進度追蹤</li>
+                            <li>跨部門協作</li>
+                            <li>風險評估與管理</li>
+                            <li>簡化文件生成</li>
+                        </ul>
                         </p>
 
                         <br>
@@ -146,11 +149,11 @@
                         <h6><i class="bi bi-arrow-down-right-circle-fill"></i>【 從臨床痛點到數位解方的實踐 】</h6>
 
                         <p class="indented-text">
-                        在醫療領域時，我深刻體會醫療人員在照護服務中的負擔，例如，「在大廳大聲唱名叫號」、
-                        「攜帶厚厚一疊衛教單張」、「反覆人工查詢及輸入資料」，這些過程不僅耗時，也容易出錯。
-                        當時我意識到：數位科技若能介入，將帶來巨大的便利。於是開始在問題解決策略中加入數位解方，
-                        透過數位看板、串連APP推播叫號、無紙化衛教系統設計，不僅有效減輕線上同仁工作負擔，
-                        同時讓醫療回歸到最核心的本質 ———— 專注於「人」。
+                            在醫療領域時，我深刻體會醫療人員在照護服務中的負擔，例如，「在大廳大聲唱名叫號」、
+                            「攜帶厚厚一疊衛教單張」、「反覆人工查詢及輸入資料」，這些過程不僅耗時，也容易出錯。
+                            當時我意識到：數位科技若能介入，將帶來巨大的便利。於是開始在問題解決策略中加入數位解方，
+                            透過數位看板、串連APP推播叫號、無紙化衛教系統設計，不僅有效減輕線上同仁工作負擔，
+                            同時讓醫療回歸到最核心的本質 ———— 專注於「人」。
                         </p>
 
                         <p class="indented-text">也因此，為了提升科技專業素養與實踐能力，我選擇進入資訊工程領域進修，
