--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="陳敬家的個人履歷 - 專案管理師">
-    <title>陳敬家 - 專案管理師</title>
+    <title>陳敬家 - About me</title>
     <!-- <link rel="stylesheet" href="styles.css" id="light-theme"> -->
 
     <!-- 預先載入兩個主題的 CSS -->
