--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                         </ul>
                         </p>
                         <p class="indented-text">
-                            累積超過七年的醫療領域服務經驗。亦參與過數位醫療服務設計，作為臨床流程顧問，跨部門進行衛教系統開發，
+                            累積超過七年的醫療領域服務經驗。亦參與過數位醫療服務設計，作爲需求部門主管角色，跨部門進行衛教系統開發，
                             協助UI/UX介面設計、系統流程規劃。
                         </p>
 
