--- a/index.html
+++ b/index.html
@@ -114,11 +114,11 @@
                         </p>
 
                         <p class="indented-text">
-                            我的個性積極主動、樂於學習，擅長跨領域溝通與協作，能快速適應新環境並解決問題。
+                            我的個性積極主動、樂於學習，擅長溝通與協作，能快速適應新環境並解決問題。
                             除了深入理解專案管理十大知識領域，亦學習將自動化工作流帶入管理應用，提高效率和精確度。
                         </p>
 
-                        <p class="indented-text">
+                        <!-- <p class="indented-text">
                             n8n在專案管理中的應用：
                         <ul>
                             <li>進度追蹤</li>
@@ -126,7 +126,7 @@
                             <li>風險評估與管理</li>
                             <li>簡化文件生成</li>
                         </ul>
-                        </p>
+                        </p> -->
 
                         <br>
                         <i class="bi bi-megaphone-fill" style="color: #4769d0;"></i>
