--- a/index.html
+++ b/index.html
@@ -149,53 +149,48 @@
                         <h6><i class="bi bi-arrow-down-right-circle-fill"></i>【 從臨床痛點到數位解方的實踐 】</h6>
 
                         <p class="indented-text">
-                            在醫療領域時，我深刻體會醫療人員在照護服務中的負擔，例如，「在大廳大聲唱名叫號」、
-                            「攜帶厚厚一疊衛教單張」、「反覆人工查詢及輸入資料」，這些過程不僅耗時，也容易出錯。
-                            當時我意識到：數位科技若能介入，將帶來巨大的便利。於是開始在問題解決策略中加入數位解方，
-                            透過數位看板、串連APP推播叫號、無紙化衛教系統設計，不僅有效減輕線上同仁工作負擔，
-                            同時讓醫療回歸到最核心的本質 ———— 專注於「人」。
+                            在醫療現場，我體會到同仁承受的繁瑣負擔：大廳唱名、厚重衛教單張、反覆人工查詢與輸入。
+                            這些流程既耗時又容易出錯。我開始思考如何以數位科技介入，並嘗試導入解方，不僅減輕同仁負擔，
+                            也讓醫療人員能把時間用在陪伴與照護病患，而不會花在重複的行政作業上。
                         </p>
 
-                        <p class="indented-text">也因此，為了提升科技專業素養與實踐能力，我選擇進入資訊工程領域進修，
-                            系統化學習軟體開發與 UI/UX 設計，將這份體悟轉化為能實踐的硬實力。</p>
+                        <p class="indented-text">這份體悟使我對科技產生濃厚興趣，也希望能進一步提升專業素養與實踐能力，
+                            因此選擇進入資訊工程領域進修，系統化學習軟體開發與 UI/UX 設計，將想法轉化為可落實的硬實力。</p>
 
                         <p class="indented-text">
-                            現在的我，已經能：
+                            經過這段歷程，如今的我已經能：
                         <ol>
                             <li>獨立開發小工具、網頁與 CRUD 系統</li>
                             <li>將自動化流程導入實際工作場景</li>
                             <li>簡化資料處理，減少人工步驟</li>
                         </ol>
-                        在這些實作過程中，我不僅思考「如何完成」，
-                        更帶入過去客戶成功主管職的經驗，從使用者成功的角度出發，
-                        規劃功能優先順序並優化互動流程，確保解決方案真正貼合使用者的需要。
+                        在這些實作過程中，我不僅思考「如何完成」，也結合過去客戶成功主管的經驗，
+                        從使用者成功的角度出發，規劃功能優先順序並優化互動流程，確保解決方案真正貼合使用者需求。
                         </p>
 
                         <h6><i class="bi bi-arrow-down-right-circle-fill"></i>【 跨領域專案管理者的願景與核心能力 】</h6>
                         <p class="indented-text">
                             未來，我希望能站在專案管理的位置，串連使用者需求與技術解決方案。
-                            我能同時理解臨床場域的痛點，也能與工程團隊有效溝通，
-                            轉譯需求並推動落地，讓科技真正解決醫療服務中的瓶頸。
+                            憑藉對臨床場域痛點的理解，以及與工程團隊溝通協作的能力，
+                            我能轉譯需求並推動落地，讓科技真正解決醫療服務中的瓶頸。
                         </p>
 
                         <p class="indented-text">
                             我將運用過去累積的三大核心能力：
 
                         <ol>
-                            <li>策略思考——如何設計最能減輕使用者負擔的解決方案，並達成專案 KPI 或 OKR？
+                            <li>策略思考——設計能減輕使用者負擔的解決方案，並確保專案達成 KPI 或 OKR。
                                 （例如：透過自動化流程，將報表產出時間縮短 50%）</li>
-                            <li>數據導向——如何透過數據分析洞察需求，進而優化醫療與數位服務流程？
+                            <li>數據導向——以數據分析洞察需求，進而優化醫療與數位服務流程。
                                 （例如：利用系統紀錄分析，提升耗材補充準確率 30%）</li>
-                            <li>溝通與提案——如何有效傳達想法，並爭取利益相關者的支持？
+                            <li>溝通與提案——清晰傳達想法並爭取利害關係人支持。
                                 （例如：跨部門簡報時，成功獲得醫護與資訊單位共識，推動新流程上線）</li>
                         </ol>
                         </p>
 
                         <p class="indented-text">
-                            這樣的角色，能讓我充分發揮跨領域專長，整合人員、需求與資源，
-                            規劃產品路線圖與服務體驗，確保專案真正解決問題並創造價值。
-                            最終，我希望推動有溫度的智慧照護模式，縮短醫療服務的距離，
-                            打造更人性化的數位醫療環境。
+                            透過這些能力，我能發揮跨領域專長，整合人員、需求與資源，規劃產品路線圖與服務體驗，確保專案真正解決問題並創造價值。
+                            最終，我希望推動有溫度的智慧照護模式，縮短醫療服務的距離，打造更人性化的數位醫療環境。
                         </p>
 
 
