--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
                                             跨領域教育與顧問角色
                                         </button>
                                         <div id="op3" class="collapse swot-content">
-                                            <p>以臨床語言連接工程與法規；擔任 PM/顧問加速落地。</p>
+                                            <p>以臨床語言連接工程；擔任 PM/顧問加速落地。</p>
                                         </div>
                                     </li>
                                 </ul>
