--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                         <p class="indented-text">
                             經過這段歷程，如今的我已經能：
                         <ol>
-                            <li>獨立開發小工具、靜態與動態網頁</li>
+                            <li>獨立開發小工具、靜態網頁(個人網站)、動態網頁(CRUD系統)</li>
                             <li>將自動化流程導入實際工作場景</li>
                             <li>簡化資料處理，減少人工步驟</li>
                         </ol>
