--- a/index.html
+++ b/index.html
@@ -160,9 +160,10 @@
                         <p class="indented-text">
                             經過這段歷程，如今的我已經能：
                         <ol>
-                            <li>獨立開發小工具、靜態網頁(個人網站)、動態網頁(CRUD系統)</li>
+                            <li>獨立開發靜態網頁(個人網站)、動態網頁(CRUD系統)</li>
+                            <li>簡易小工具，簡化資料處理，減少人工步驟</li>
                             <li>將自動化流程導入實際工作場景</li>
-                            <li>簡化資料處理，減少人工步驟</li>
+                            
                         </ol>
                         在這些實作過程中，我不僅思考「如何完成」，也結合過去客戶成功主管的經驗，
                         從使用者成功的角度出發，規劃功能優先順序並優化互動流程，確保解決方案真正貼合使用者需求。
