--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                         <p class="indented-text">
                             經過這段歷程，如今的我已經能：
                         <ol>
-                            <li>獨立開發靜態網頁(個人網站)、動態網頁(CRUD系統)</li>
+                            <li>開發靜態網頁(個人網站)、動態網頁(CRUD系統)</li>
                             <li>簡易小工具，簡化資料處理，減少人工步驟</li>
                             <li>將自動化流程導入實際工作場景</li>
                             
